Switched over to ProcessBuilder instead of Runtime